# PenSwitcher

./: README.md  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  hotkeys.rs  lib.rs  logging.rs  main.rs  models.rs  overlay.rs  picker.rs  state.rs  storage.rs  uia.rs  utils.rs  windows_api.rs
